--- a/Doc_Planner/Views/Appointments/Create.cshtml
+++ b/Doc_Planner/Views/Appointments/Create.cshtml
@@ -29,8 +29,10 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    @Html.RadioButtonFor(model => model.Sexe, false) Masculin
-                    @Html.RadioButtonFor(model => model.Sexe, true) Féminin
+                    <label asp-for="Sexe" class="control-label"></label><br />
+                    @Html.RadioButtonFor(model => model.Sexe, "true") Masculin
+                    @Html.RadioButtonFor(model => model.Sexe, "false") Féminin
+                    <span asp-validation-for="Sexe" class="text-danger"></span>
                 </label>
             </div>
             <div class="form-group">
