--- a/Doc_Planner/Views/Appointments/Details.cshtml
+++ b/Doc_Planner/Views/Appointments/Details.cshtml
@@ -31,8 +31,14 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Sexe)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sexe)
+        <dd class="col-sm-10">
+            @if (Html.ViewData.Model.Sexe == true)
+            {
+                <img src="~/men.png" />
+
+            }
+            else
+            {<img src="~/women.png">}
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Birthday)
