--- a/Doc_Planner/Views/Shared/_Layout.cshtml
+++ b/Doc_Planner/Views/Shared/_Layout.cshtml
@@ -34,9 +34,23 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Appointments">Rendez-vous</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Appointments" asp-action="Index">Rendez-vous</a>
                         </li>
-                        
+
+                        <li>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <a asp-controller="Account" asp-action="Logout">@User.Identity.Name, Se déconnecter  </a>
+                            }
+                            else
+                            {
+                                <a asp-controller="Account" asp-action="Login"> Se connecter </a>
+
+                            }
+                        </li>
+
+
+
                     </ul>
                 </div>
             </div>
