--- a/Doc_Planner/Views/Appointments/Create.cshtml
+++ b/Doc_Planner/Views/Appointments/Create.cshtml
@@ -12,11 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="HDebutRdv" class="control-label"></label>
-                <input asp-for="HDebutRdv" class="form-control" />
-                <span asp-validation-for="HDebutRdv" class="text-danger"></span>
-            </div>
+            <text> Date & heure du rendez-vous </text>
+            <span class="form-check-inline">
+                <input asp-for="HDebutRdv" type="date" class="form-control form-control-sm col-lg-9" required /> <input type="time" name="heure" class="form-control form-control-sm col-lg-5" required />
+
+
+            </span>
+            <br />
+            <span asp-validation-for="HDebutRdv" class="text-danger"></span>
+            <br />
+
             <div class="form-group">
                 <label asp-for="Nom" class="control-label"></label>
                 <input asp-for="Nom" class="form-control" />
@@ -27,13 +32,14 @@
                 <input asp-for="Prenom" class="form-control" />
                 <span asp-validation-for="Prenom" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <label asp-for="Sexe" class="control-label"></label><br />
-                    @Html.RadioButtonFor(model => model.Sexe, "true") Masculin
-                    @Html.RadioButtonFor(model => model.Sexe, "false") Féminin
-                    <span asp-validation-for="Sexe" class="text-danger"></span>
-                </label>
+            <div class="form-group ">
+
+                <label asp-for="Sexe" class="control-label"></label>&nbsp;
+                @Html.RadioButtonFor(model => model.Sexe, "true")Masculin
+                @Html.RadioButtonFor(model => model.Sexe, "false")Féminin
+                <br />
+                <span asp-validation-for="Sexe" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Birthday" class="control-label"></label>
@@ -42,8 +48,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Diabete" class="control-label"></label>
-                <input asp-for="Diabete" class="form-control" />
-                <span asp-validation-for="Diabete" class="text-danger"></span>
+                <select asp-for="Diabete" class="form-control">
+                    <option selected value="">Sans</option>
+                    <option value="Type2">Type 1</option>
+                    <option value="Type1">Type 2</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Poids" class="control-label"></label>
@@ -55,11 +64,15 @@
                 <input asp-for="Taille" class="form-control" />
                 <span asp-validation-for="Taille" class="text-danger"></span>
             </div>
-            
+
             <div class="form-group">
                 <label asp-for="ExamenType" class="control-label"></label>
-                <input asp-for="ExamenType" class="form-control" />
-                <span asp-validation-for="ExamenType" class="text-danger"></span>
+                <select asp-for="ExamenType" class="form-control" placeholder="Type de l'examen">
+                    <option value="">Selectionner un type d'examen . . . </option>
+                    <option value="IRM">IRM</option>
+                    <option value="Echographie">Echographie</option>
+                    <option value="Arthroscanner">Arthroscanner</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="NISS" class="control-label"></label>
@@ -71,7 +84,15 @@
                 <input asp-for="Telephone" class="form-control" />
                 <span asp-validation-for="Telephone" class="text-danger"></span>
             </div>
-            
+            <div>
+                <label asp-for="HopitalDeRef" class="control-label"></label>
+                <select asp-for="HopitalDeRef" class="form-control">
+                    <option value="GHDC">Grand Hôpital de Charleroi</option>
+                    <option value="CNDG">Clinique Notre-Dame de Grâce </option>
+                    <option value="CHUCHARLEROI">CHU Charleroi</option>
+                </select>
+            </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
